--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,8 @@
 	"version": "0.0.1",
 	"private": true,
 	"engines": {
-		"node": "7.8.0",
-		"npm": "4.4.4",
-		"yarn": "0.22.0"
+		"node": "6.9.0",
+		"npm": "4.1.1"
 	},
 	"scripts": {
 		"build:test": "webpack --config webpack.config.js",
