--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+{	"engines": {
+		"node": "6.9.0",
 	"scripts": {
 		"postinstall": "cd client && yarn install",
 		"lint": "cd client && yarn run lint --silent",
