--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ node_modules
 .byebug_history
 
 # Generated js bundles
+/app/assets/webpack/webpack-bundle.js
 
 # Ignore application configuration
 /config/application.yml
